# cross_platform_tcp_lib

./: CMakeLists.txt  Make.include  Makefile  README.md  ReadMe.txt  测试报告.pptx
3rd/: CMakeLists.txt  Makefile  boost.sh  spdlog.sh
3rd/boost_1_77_0/lib/: libboost_atomic.so.1.77.0  libboost_container.so.1.77.0  libboost_context.so.1.77.0  libboost_date_time.so.1.77.0  libboost_fiber.so.1.77.0  libboost_graph.so.1.77.0  libboost_iostreams.so.1.77.0  libboost_locale.so.1.77.0  libboost_log_setup.so.1.77.0  libboost_math_c99l.so.1.77.0  libboost_math_tr1.so.1.77.0  libboost_math_tr1f.so.1.77.0  libboost_nowide.so.1.77.0  libboost_numpy27.so.1.77.0  libboost_prg_exec_monitor.so.1.77.0  libboost_program_options.so.1.77.0  libboost_random.so.1.77.0  libboost_regex.so.1.77.0  libboost_serialization.so.1.77.0  libboost_stacktrace_addr2line.so.1.77.0  libboost_stacktrace_noop.so.1.77.0  libboost_thread.so.1.77.0  libboost_type_erasure.so.1.77.0
3rd/boost_1_77_0/lib/cmake/boost_atomic-1.77.0/: boost_atomic-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_chrono-1.77.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_container-1.77.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_context-1.77.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_contract-1.77.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_coroutine-1.77.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_date_time-1.77.0/: boost_date_time-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_exception-1.77.0/: boost_exception-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_fiber-1.77.0/: boost_fiber-config.cmake  libboost_fiber-variant-shared.cmake  libboost_fiber-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_fiber_numa-1.77.0/: boost_fiber_numa-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_filesystem-1.77.0/: boost_filesystem-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_graph-1.77.0/: boost_graph-config.cmake  libboost_graph-variant-shared.cmake  libboost_graph-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_graph_parallel-1.77.0/: boost_graph_parallel-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_headers-1.77.0/: boost_headers-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_iostreams-1.77.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake  libboost_iostreams-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_json-1.77.0/: boost_json-config.cmake  libboost_json-variant-shared.cmake  libboost_json-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_locale-1.77.0/: boost_locale-config.cmake  libboost_locale-variant-shared.cmake  libboost_locale-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_log-1.77.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_log_setup-1.77.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-shared.cmake  libboost_log_setup-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_math_c99-1.77.0/: boost_math_c99-config.cmake  libboost_math_c99-variant-shared.cmake  libboost_math_c99-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_math_c99f-1.77.0/: boost_math_c99f-config.cmake  libboost_math_c99f-variant-shared.cmake  libboost_math_c99f-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_math_c99l-1.77.0/: boost_math_c99l-config.cmake  libboost_math_c99l-variant-shared.cmake  libboost_math_c99l-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_math_tr1-1.77.0/: boost_math_tr1-config.cmake  libboost_math_tr1-variant-shared.cmake  libboost_math_tr1-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_math_tr1f-1.77.0/: boost_math_tr1f-config.cmake  libboost_math_tr1f-variant-shared.cmake  libboost_math_tr1f-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_math_tr1l-1.77.0/: boost_math_tr1l-config.cmake  libboost_math_tr1l-variant-shared.cmake  libboost_math_tr1l-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_mpi-1.77.0/: boost_mpi-config.cmake
3rd/boost_1_77_0/lib/cmake/boost_nowide-1.77.0/: boost_nowide-config.cmake  libboost_nowide-variant-shared.cmake  libboost_nowide-variant-static.cmake
3rd/boost_1_77_0/lib/cmake/boost_numpy-1.77.0/: boost_numpy-config.cmake  libboost_numpy-variant-shared-py2.7.cmake  (+1 more)
base/: CMakeLists.txt  Makefile_src  Makefile_test
base/src/: CMakeLists.txt  base.h  my_spdlog.h  my_spdlog.h_bak  my_spdlog2.h  thread.cpp  thread.h
base/src/lockfree_queue/: Readme.txt  lockFreeQueue.h
base/src/ring_buffer/: ringBuffer.h
base/test/: CMakeLists.txt  LockFreeQueueTest.cpp  LockFreeQueueTest_mult.cpp  Makefile  RingBufferTest.cpp  libbase.so.1.0.0  mqueue_test.cpp  spdlog.cpp  spdlog2.cpp
tcp_base_on_asio/: CMakeLists.txt  Makefile_src
tcp_base_on_asio/src/: CMakeLists.txt  tools.cpp  tools.h
tcp_base_on_asio/src/tcp_client/: CMakeLists.txt  client.cpp  client.h
tcp_base_on_asio/src/tcp_common/: common.h  micro_buffer.cpp  micro_buffer.h  send_cell.cpp  send_cell.h  tcp_error.cpp  tcp_error.h
tcp_base_on_asio/src/tcp_server/: CMakeLists.txt  ReadMe.txt  manager_server.cpp  manager_server.h  notify.h  server.cpp  server.h  session.cpp  session.h
tcp_base_on_asio/test/: Makefile  Makefile_test_client  Makefile_test_server  structInfo.h  tcp_struct.h
tcp_base_on_asio/test/tcp_client/: CMakeLists.txt  main.cpp
tcp_base_on_asio/test/tcp_server/: CMakeLists.txt  main.cpp  message_center.cpp  message_center.h
thread_pool/: Makefile_src  Makefile_test
thread_pool/src/: job.h  threadmanager.cpp  threadmanager.h  threadpool.cpp  threadpool.h  workthread.cpp  workthread.h
thread_pool/test/: main.cpp
(+49 files in other folders)
